[gd_scene load_steps=3 format=3 uid="uid://crpl1witt5m7h"]

[ext_resource type="Script" path="res://scripts/gdscript/gun_script.gd" id="1_r4qcp"]
[ext_resource type="Texture2D" uid="uid://b2n4alqa8ktd8" path="res://assets/gun.PNG" id="2_irux1"]

[node name="GunScene" type="Node2D"]
script = ExtResource("1_r4qcp")

[node name="Pivot_Point" type="Marker2D" parent="."]

[node name="Bullet_Point" type="Marker2D" parent="Pivot_Point"]
position = Vector2(60, 0)

[node name="Box_SnapPos" type="Marker2D" parent="Pivot_Point"]
position = Vector2(90, 0)
rotation = -1.57079

[node name="Gun" type="Sprite2D" parent="Pivot_Point"]
position = Vector2(62, -1)
scale = Vector2(1.23438, 1.23438)
texture = ExtResource("2_irux1")
flip_h = true
